Se creó con Colab

--- a/Práctica05_AF_DF_JJ.ipynb
+++ b/Práctica05_AF_DF_JJ.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "_-yL9HIKp7ho"
       },
@@ -79,7 +79,23 @@
         "        r = np.sqrt(x**2 + y**2)\n",
         "        theta = np.arctan2(y, x)\n",
         "        conjunto_polares.append((r, theta))\n",
-        "    return conjunto_polares"
+        "    return conjunto_polares\n",
+        "\n",
+        "  def tabla_comp(self, puntos):\n",
+        "    tabla_comp = []\n",
+        "    for punto in puntos:\n",
+        "      x, y = punto\n",
+        "      r = np.sqrt(x**2 + y**2)\n",
+        "      theta = np.arctan2(y, x)\n",
+        "      tabla_comp.append((x, y, r, theta))\n",
+        "    return tabla_comp\n",
+        "\n",
+        "    def imprimir_tabla(self, tabla_comparativa):\n",
+        "      print(f\"{'x':>10} {'y':>10} {'r':>10} {'theta':>10}\")\n",
+        "      print(\"-\" * 40)\n",
+        "      for fila in tabla_comparativa:\n",
+        "        x, y, r, theta = fila\n",
+        "        print(f\"{x:>10.2f} {y:>10.2f} {r:>10.2f} {theta:>10.5f}\")"
       ]
     },
     {
